--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/src/assets/ico/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Movie App" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>Movie App</title>
   </head>
   <body>
